working friendsController
